# docs/swagger.json
@@ -4,6 +4,22 @@
         "contact": {}
     },
     "paths": {
+        "/api/v1/alipay/tenant_info": {
+            "post": {
+                "tags": [
+                    "支付相关接口"
+                ],
+                "summary": "获取商家信息",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/alipayapi.TenantInfoResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/integral/generate_key": {
             "post": {
                 "tags": [
@@ -29,7 +45,7 @@
                 "tags": [
                     "积分相关接口"
                 ],
-                "summary": "手动充值",
+                "summary": "手动充值(管理员使用)",
                 "parameters": [
                     {
                         "description": "手动充值请求参数",
@@ -160,6 +176,46 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/openai.ImageRequest"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/v1/user/change_password": {
+            "post": {
+                "tags": [
+                    "用户相关接口"
+                ],
+                "summary": "用户修改密码",
+                "parameters": [
+                    {
+                        "description": "发送验证码请求参数(默认为email)",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.ChangePasswordRequest"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/v1/user/change_password/verify/code": {
+            "post": {
+                "tags": [
+                    "用户相关接口"
+                ],
+                "summary": "在忘记密码时发送验证码",
+                "parameters": [
+                    {
+                        "description": "发送验证码请求参数(默认为email)",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.SendPasswordVerificationCodeRequest"
                         }
                     }
                 ],
@@ -302,6 +358,26 @@
         }
     },
     "definitions": {
+        "alipayapi.TenantInfoResponse": {
+            "type": "object",
+            "properties": {
+                "alipay_app_id": {
+                    "type": "string"
+                },
+                "auth_redirect": {
+                    "type": "string"
+                },
+                "merchant_id": {
+                    "type": "string"
+                },
+                "merchant_logo": {
+                    "type": "string"
+                },
+                "merchant_name": {
+                    "type": "string"
+                }
+            }
+        },
         "integral.BatchGenerateKeyRequest": {
             "type": "object",
             "properties": {
@@ -310,7 +386,7 @@
                     "default": 10
                 },
                 "type": {
-                    "description": "1代表100积分，2代表500积分，3代表1000积分",
+                    "description": "1代表100积分，2代表500积分，3代表2000积分",
                     "type": "integer",
                     "default": 1
                 }
@@ -451,6 +527,29 @@
                 }
             }
         },
+        "user.ChangePasswordRequest": {
+            "type": "object",
+            "required": [
+                "newPassword",
+                "subjectName",
+                "verificationCode"
+            ],
+            "properties": {
+                "newPassword": {
+                    "type": "string"
+                },
+                "subjectName": {
+                    "type": "string"
+                },
+                "subjectType": {
+                    "description": "可选字段，默认为userapi.ChangePasswordMailCode",
+                    "type": "integer"
+                },
+                "verificationCode": {
+                    "type": "string"
+                }
+            }
+        },
         "user.FeedbackRequest": {
             "type": "object",
             "required": [
@@ -554,6 +653,21 @@
                     "description": "可选字段，默认为email",
                     "type": "string",
                     "default": "email"
+                }
+            }
+        },
+        "user.SendPasswordVerificationCodeRequest": {
+            "type": "object",
+            "required": [
+                "subjectName"
+            ],
+            "properties": {
+                "subjectName": {
+                    "type": "string"
+                },
+                "subjectType": {
+                    "description": "可选字段，默认为userapi.ChangePasswordMailCode",
+                    "type": "integer"
                 }
             }
         },
